--- a/pom.xml
+++ b/pom.xml
@@ -154,9 +154,9 @@
 	</dependency>
 
 	<dependency>
-		<groupId>org.mybatis.generator</groupId>
-		<artifactId>mybatis-generator-core</artifactId>
-		<version>1.3.3</version>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-core</artifactId>
+	    <version>1.4.0</version>
 	</dependency>
 
 
