--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 		 xmlns="http://java.sun.com/xml/ns/javaee"
 		 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" >
-  <display-name>Tourism</display-name>
+  <display-name>ZQU_005</display-name>
   <welcome-file-list>
   	<welcome-file>login.html</welcome-file>
     <welcome-file>index.html</welcome-file>
