--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <!-- 属性 -->
   <properties>
 	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	  <spring.version>4.1.4.RELEASE</spring.version>
+	  <spring.version>4.1.6.RELEASE</spring.version>
 	  <jackson.version>2.5.0</jackson.version>
   </properties>
   
@@ -80,11 +80,19 @@
     </dependency>
 	
 	<!-- spring集成MongoDB -->
-	<dependency>
+	<!-- 2.0.8.RELEASE版本中，spring-data-mongodb依赖中的spring-expression会与
+	spring-context依赖中的spring-expression产生冲突，所以使用较低版本的1.4.2.RELEASE -->
+	<!-- <dependency>
     	<groupId>org.springframework.data</groupId>
    		<artifactId>spring-data-mongodb</artifactId>
     	<version>2.0.8.RELEASE</version>
+	</dependency> -->
+	<dependency>
+	    <groupId>org.springframework.data</groupId>
+	    <artifactId>spring-data-mongodb</artifactId>
+	    <version>1.4.2.RELEASE</version>
 	</dependency>
+	
 	
 	<!-- MongoDB驱动 -->
 	<dependency>
@@ -92,7 +100,6 @@
 	    <artifactId>mongo-java-driver</artifactId>
 	    <version>3.8.0</version>
 	</dependency>
-	
     
     <!-- log4j -->
     <dependency>
@@ -135,6 +142,32 @@
 	    <version>${jackson.version}</version>
 	</dependency>
 	
+	<!-- shiro权限认证 -->
+	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-core</artifactId>
+	    <version>1.4.0</version>
+	</dependency>
+  	
+  	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-web</artifactId>
+	    <version>1.4.0</version>
+	</dependency>
+  	
+  	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-spring</artifactId>
+	    <version>1.4.0</version>
+	</dependency>
+	
+	<!-- reids缓存 -->
+	<dependency>
+  		<groupId>redis.clients</groupId>
+  		<artifactId>jedis</artifactId>
+  		<version>2.8.0</version>
+  	</dependency>
+  	
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
