--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,72 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="3.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-		 xmlns="http://java.sun.com/xml/ns/javaee"
-		 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" >
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>ZQU_005</display-name>
   <welcome-file-list>
-  	<welcome-file>login.html</welcome-file>
+    <welcome-file>login.html</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
   </welcome-file-list>
-  
-  <!-- spring配置 -->
   <context-param>
-  	<param-name>contextConfigLocation</param-name>
-  	<param-value>classpath:spring.xml</param-value>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:spring.xml</param-value>
   </context-param>
   <listener>
-  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-  
-  <!-- spring mvc配置 -->
   <servlet>
-  	<servlet-name>springmvc</servlet-name>
-  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-  	<init-param>
-  		<param-name>contextConfigLocation</param-name>
-  		<param-value>classpath:springmvc.xml</param-value>
-  	</init-param>
-  	<load-on-startup>1</load-on-startup>
+    <servlet-name>springmvc</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:springmvc.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>springmvc</servlet-name>
-  	<url-pattern>*.action</url-pattern>
+    <servlet-name>springmvc</servlet-name>
+    <url-pattern>*.action</url-pattern>
   </servlet-mapping>
-  
-  <!-- 编码过滤器 -->
   <filter>
-  	<filter-name>springEncodingFilter</filter-name>
-  	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-  	<init-param>
-  		<param-name>encoding</param-name>
-  		<param-value>UTF-8</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>forceEncoding</param-name>
-  		<param-value>true</param-value>
-  	</init-param>
+    <filter-name>springEncodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
-  	<filter-name>springEncodingFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
+    <filter-name>springEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
-  <!-- add by lgp
-  	   search the shiroFilter bean in spring.xml file
-   -->
   <filter>
-  	<filter-name>shiroFilter</filter-name>
-  	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-  	<init-param>
-  		<param-name>targetFilterLifecycle</param-name>
-  		<param-value>true</param-value>
-  	</init-param>
+    <filter-name>shiroFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    <init-param>
+      <param-name>targetFilterLifecycle</param-name>
+      <param-value>true</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
-  	<filter-name>shiroFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
+    <filter-name>shiroFilter</filter-name>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
 </web-app>
