--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,13 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/resources/log4j.properties=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/comment.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/editShopInfo.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/goodsInfo.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/goodsPullOn.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/order.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/orderInfo.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/orderSend.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/seller/soldGood.jsp=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
