--- a/pom.xml
+++ b/pom.xml
@@ -81,14 +81,17 @@
 		</dependency>
 
 		<!-- spring集成MongoDB -->
-		<!-- 2.0.8.RELEASE版本中，spring-data-mongodb依赖中的spring-expression会与 spring-context依赖中的spring-expression产生冲突，所以使用较低版本的1.4.2.RELEASE -->
-		<!-- <dependency> <groupId>org.springframework.data</groupId> <artifactId>spring-data-mongodb</artifactId> 
+		<!-- 2.0.8.RELEASE版本中，spring-data-mongodb依赖中的spring-expression会与 
+			 spring-context依赖中的spring-expression产生冲突，所以使用较低版本的1.10.15.RELEASE 
+			 另外，为支持MongoDB中的管道聚合查询，spring-data-mongodb的版本至少为 1.10.11  -->
+		<!-- <dependency>
+			<groupId>org.springframework.data</groupId> 
+			<artifactId>spring-data-mongodb</artifactId> 
 			<version>2.0.8.RELEASE</version> </dependency> -->
-		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
-			<version>1.10.7.RELEASE</version>
+			<version>1.10.15.RELEASE</version>
 		</dependency>
 
 		<!-- MongoDB驱动 -->
@@ -228,9 +231,12 @@
 			<version>1.7.1.RELEASE</version>
 		</dependency>
 
-
+		<dependency>
+		    <groupId>com.alipay.sdk</groupId>
+		    <artifactId>alipay-sdk-java</artifactId>
+		    <version>3.3.49.ALL</version>
+		</dependency>
 	</dependencies>
-
 
 	<build>
 		<finalName>shopping</finalName>
