--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,21 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- 支持jsp -->
+    	<dependency>
+	    	<groupId>javax.servlet.jsp</groupId>
+	    	<artifactId>jsp-api</artifactId>
+	    	<version>2.2</version>
+	    	<scope>provided</scope>
+		</dependency>
+		
+		<!-- 支持jtst -->
+		<dependency>
+	    	<groupId>javax.servlet</groupId>
+	    	<artifactId>jstl</artifactId>
+	    	<version>1.2</version>
+		</dependency>
+		
 		<!-- json -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
