--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,12 @@
 		</dependency>
 
 		<!-- spring集成MongoDB -->
-		<!-- 2.0.8.RELEASE版本中，spring-data-mongodb依赖中的spring-expression会与 spring-context依赖中的spring-expression产生冲突，所以使用较低版本的1.4.2.RELEASE -->
-		<!-- <dependency> <groupId>org.springframework.data</groupId> <artifactId>spring-data-mongodb</artifactId> 
+		<!-- 2.0.8.RELEASE版本中，spring-data-mongodb依赖中的spring-expression会与 
+			 spring-context依赖中的spring-expression产生冲突，所以使用较低版本的1.10.15.RELEASE 
+			 另外，为支持MongoDB中的管道聚合查询，spring-data-mongodb的版本至少为 1.10.11  -->
+		<!-- <dependency>
+			<groupId>org.springframework.data</groupId> 
+			<artifactId>spring-data-mongodb</artifactId> 
 			<version>2.0.8.RELEASE</version> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb -->
 		<dependency>
@@ -226,6 +230,17 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-redis</artifactId>
 			<version>1.7.1.RELEASE</version>
+		</dependency>
+		<!-- 文件上传 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 
 
