--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.zqu</groupId>
 	<artifactId>ZQU_005</artifactId>
-	<packaging>war</packaging>
+	<packaging>war</packaging>  
 	<version>0.0.1-SNAPSHOT</version>
 	<name>shopping Maven Webapp</name>
 	<url>http://maven.apache.org</url>
@@ -12,7 +12,7 @@
 	<!-- 属性 -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.2.6.RELEASE</spring.version>
+		<spring.version>4.3.16.RELEASE</spring.version>
 		<jackson.version>2.5.0</jackson.version>
 	</properties>
 
@@ -111,10 +111,10 @@
 
 		<!-- 支持servlet -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>3.0-alpha-1</version>
-			<scope>provided</scope>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>javax.servlet-api</artifactId>
+    		<version>4.0.0</version>
+    		<scope>provided</scope>
 		</dependency>
 
 		<!-- json -->
